[gd_scene load_steps=110 format=3 uid="uid://lhpwdogx8dj8"]

[ext_resource type="Script" path="res://scripts/cutscene_scripts/cutscene_player.gd" id="1_5rjpj"]
[ext_resource type="AudioStream" uid="uid://dcb0u78xotq6h" path="res://audio/sound_effects/floor1/Raket Smithing.wav" id="2_a78o3"]
[ext_resource type="AudioStream" uid="uid://yvem2o5hlw7u" path="res://audio/sound_effects/floor1/Snekkers Hissing.wav" id="3_fk5nx"]
[ext_resource type="AudioStream" uid="uid://3o778887i5ks" path="res://audio/sound_effects/floor2/ENEMY DETECTED SFX.wav" id="3_q5ij3"]
[ext_resource type="Texture2D" uid="uid://d2lk0hs7sxw3g" path="res://assets/floor_2/krab animation.png" id="4_tyrr5"]
[ext_resource type="Texture2D" uid="uid://dtasqkj3bgk3y" path="res://assets/floor_1/cutscenes/Raket Smithing 341x192.png" id="5_gklb7"]
[ext_resource type="Texture2D" uid="uid://bdvyh0tx3d0oa" path="res://assets/floor_3/Snekkers Animation.png" id="6_xus5a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6htk6"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvw2w"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb3wv"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e52dl"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjogc"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mobl"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_q41px"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_61v7k"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3vln"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y2ty"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoe1y"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_y04rl"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_132ml"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fkbf"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_toem4"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_smep5"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wi825"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppimv"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_55sx4"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0g1tv"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6aypc"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hjxd"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_in0xr"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_abt30"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ueq8"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dr1y"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb50f"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sog2o"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o51j8"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdha7"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xctkk"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0aj6"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipibb"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jox2"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6616o"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxv0d"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7jha"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1d5u"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqykg"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_csqdy"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_14r1h"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8ylw"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_olonl"]
atlas = ExtResource("4_tyrr5")
region = Rect2(0, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lvln"]
atlas = ExtResource("4_tyrr5")
region = Rect2(341, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ubh"]
atlas = ExtResource("4_tyrr5")
region = Rect2(682, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_frevl"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqqyq"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv7s5"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi5qx"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nc4i"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctidr"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1ecf"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4sh1"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2020"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bxj3"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi0h0"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp4tb"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7avc3"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkfr8"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xdbb"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhl2g"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ad08"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoadv"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u21nc"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ct88"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fhyj"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwcng"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pk32"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kahtk"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j48qd"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0do7j"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2lf4"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mft4t"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_oj1ds"]
atlas = ExtResource("5_gklb7")
region = Rect2(0, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xm8d"]
atlas = ExtResource("5_gklb7")
region = Rect2(341, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojlio"]
atlas = ExtResource("6_xus5a")
region = Rect2(0, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0piou"]
atlas = ExtResource("6_xus5a")
region = Rect2(341, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xj55"]
atlas = ExtResource("6_xus5a")
region = Rect2(682, 0, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kixw3"]
atlas = ExtResource("6_xus5a")
region = Rect2(0, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybxuf"]
atlas = ExtResource("6_xus5a")
region = Rect2(341, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqc7s"]
atlas = ExtResource("6_xus5a")
region = Rect2(682, 192, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8iag"]
atlas = ExtResource("6_xus5a")
region = Rect2(0, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptyu0"]
atlas = ExtResource("6_xus5a")
region = Rect2(341, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6jlq"]
atlas = ExtResource("6_xus5a")
region = Rect2(682, 384, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_35bxy"]
atlas = ExtResource("6_xus5a")
region = Rect2(0, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwy3u"]
atlas = ExtResource("6_xus5a")
region = Rect2(341, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjrrw"]
atlas = ExtResource("6_xus5a")
region = Rect2(682, 576, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vbii"]
atlas = ExtResource("6_xus5a")
region = Rect2(0, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbfpc"]
atlas = ExtResource("6_xus5a")
region = Rect2(341, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb1dy"]
atlas = ExtResource("6_xus5a")
region = Rect2(682, 768, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5i02e"]
atlas = ExtResource("6_xus5a")
region = Rect2(0, 960, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jilej"]
atlas = ExtResource("6_xus5a")
region = Rect2(341, 960, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7nfu"]
atlas = ExtResource("6_xus5a")
region = Rect2(682, 960, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hfi7"]
atlas = ExtResource("6_xus5a")
region = Rect2(0, 1152, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwf07"]
atlas = ExtResource("6_xus5a")
region = Rect2(341, 1152, 341, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltm32"]
atlas = ExtResource("6_xus5a")
region = Rect2(682, 1152, 341, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_ipgfp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6htk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvw2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb3wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e52dl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjogc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mobl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q41px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61v7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3vln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1y2ty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoe1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y04rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_132ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fkbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toem4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smep5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi825")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppimv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55sx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0g1tv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aypc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hjxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in0xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abt30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ueq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dr1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb50f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sog2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o51j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdha7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xctkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0aj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipibb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jox2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6616o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxv0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7jha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1d5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqykg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csqdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14r1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8ylw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olonl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lvln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ubh")
}],
"loop": false,
"name": &"crab_swinging",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_frevl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqqyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv7s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi5qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nc4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctidr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1ecf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4sh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2020")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bxj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi0h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp4tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7avc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkfr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xdbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhl2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ad08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoadv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u21nc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ct88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fhyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwcng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pk32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kahtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j48qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0do7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2lf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mft4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oj1ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xm8d")
}],
"loop": false,
"name": &"raket_smithing",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojlio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0piou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xj55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kixw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybxuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqc7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8iag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptyu0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6jlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35bxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwy3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjrrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vbii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbfpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb1dy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5i02e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jilej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7nfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hfi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwf07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltm32")
}],
"loop": false,
"name": &"snekkers_hiss",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_o0snc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"raket_smithing"]
}

[sub_resource type="Animation" id="Animation_vgdo0"]
resource_name = "crab_swinging"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"crab_swinging"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_jdigo"]
resource_name = "raket_smithing"
length = 5.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_qmjoa"]
resource_name = "snekkers_hiss"
length = 3.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 4, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"snekkers_hiss"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nxlu6"]
_data = {
"RESET": SubResource("Animation_o0snc"),
"crab_swinging": SubResource("Animation_vgdo0"),
"raket_smithing": SubResource("Animation_jdigo"),
"snekkers_hiss": SubResource("Animation_qmjoa")
}

[node name="CutscenePlayer" type="Node2D"]
script = ExtResource("1_5rjpj")

[node name="RaketSmithingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_a78o3")
volume_db = 0.384

[node name="SnekkersHissingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fk5nx")
volume_db = -14.054
mix_target = 2

[node name="GiantCrabSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_q5ij3")
volume_db = -3.759

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ipgfp")
animation = &"raket_smithing"
autoplay = "raket_smithing"
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nxlu6")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
